--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ dependencies:
   url_launcher: ^5.4.11
   flutter_vector_icons: ^0.2.1
   flutter_emoji: ^2.2.1+1
+  firebase_core: ^0.4.5
+  firebase_auth: ^0.16.1
+  cloud_firestore: ^0.13.7
+  simple_router: ^0.1.0+1
+  get: ^2.5.2
 
 
 
