--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,11 @@ dependencies:
   cloud_firestore: ^0.13.7
   simple_router: ^0.1.0+1
   get: ^2.5.2
+  geolocation: ^1.1.2
+  geolocator: ^5.3.2+2
+  sqflite: ^1.3.1
+  path_provider: ^1.6.11
+
 
 
 
